Fix whitespace bug in sidebar

--- a/scss/_emuzone.scss
+++ b/scss/_emuzone.scss
@@ -12,8 +12,11 @@ h1 {
 }
 
 h2 {
-  margin-top: $spacer * 3;
   margin-bottom: 0.8em;
+}
+
+.entry-content h2 {
+  margin-top: $spacer * 3;
 }
 
 pre {
